// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING SEARCHBAR COMPONENT - CHECK SEARCH VALUE - Add vaule as a term to search 1`] = `
<input
  class="sc-jrAGrp fCthTV"
  id="searchbar"
  name="term"
  placeholder="Search term"
  type="text"
  value="useEffect"
/>
`;

exports[`TESTING SEARCHBAR COMPONENT - CHECK STATES OPEN AND CLOSE - Input closed is checked 1`] = `
Array [
  <input
    class="sc-jrAGrp fCthTV"
    id="searchbar"
    name="term"
    placeholder="Search term"
    type="text"
    value=""
  />,
  <input
    id="all"
    name="state"
    type="radio"
    value=""
  />,
  <input
    id="open"
    name="state"
    type="radio"
    value="open"
  />,
  <input
    checked=""
    id="closed"
    name="state"
    type="radio"
    value="closed"
  />,
]
`;

exports[`TESTING SEARCHBAR COMPONENT - CHECK STATES OPEN AND CLOSE - Input open is checked 1`] = `
Array [
  <input
    class="sc-jrAGrp fCthTV"
    id="searchbar"
    name="term"
    placeholder="Search term"
    type="text"
    value=""
  />,
  <input
    id="all"
    name="state"
    type="radio"
    value=""
  />,
  <input
    checked=""
    id="open"
    name="state"
    type="radio"
    value="open"
  />,
  <input
    id="closed"
    name="state"
    type="radio"
    value="closed"
  />,
]
`;

exports[`TESTING SEARCHBAR COMPONENT - Default Searchbar HTML output 1`] = `
Array [
  <div
    class="sc-bdfBwQ sc-fubCfw kUdDos jYqrAh"
  >
    <input
      class="sc-jrAGrp fCthTV"
      id="searchbar"
      name="term"
      placeholder="Search term"
      type="text"
      value=""
    />
    <label>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search fa-w-16 icon_search"
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>,
  <div
    class="sc-bdfBwQ sc-pFZIQ kUdDos ckbQdV"
  >
    <label>
      ALL
      <input
        checked=""
        id="all"
        name="state"
        type="radio"
        value=""
      />
    </label>
    <label
      class="open"
    >
      OPEN
      <input
        id="open"
        name="state"
        type="radio"
        value="open"
      />
    </label>
    <label
      class="closed"
    >
      CLOSED
      <input
        id="closed"
        name="state"
        type="radio"
        value="closed"
      />
    </label>
  </div>,
]
`;
